# wise-test

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/model/: adf_test.py  bp_test.py  daily_analysis.py  fcast_function.py  granger_test.py  jb_test.py  seas_test.py  summary.py
tests/: test_silso.py
web/: app.py  plots.py
