[project]
name = "wise-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel",
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "yfinance>=0.2.66",
    "matplotlib>=3.10.8",
    "statsmodels>=0.14.6",
    "statsforecast>=2.0.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "web"]
